...
            ).padding(8.dp),
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.Start
        ) {
            if (loggedUser?.role == Role.CEO || loggedUser?.role == Role.PROJECT_MANAGER) {
                MultipurposeButton(
                    text = "Change role",
                    onClick = onChangeRoleClick,
                    modifier = Modifier.padding(horizontal = 4.dp),
                    endIcon = if (!isDropdownOpen) painterResource(Res.drawable.arrow_down) else painterResource(
                        Res.drawable.arrow_up
                    )
                )
...
                    }
                }
            }

            if (loggedUser?.role == Role.CEO || loggedUser?.role == Role.HUMAN_RESOURCES) {
                MultipurposeButton(
                    text = "Delete",
                    iconTint = Color.Black,
                    textColor = Color.Black,
                    buttonColor = Sunny,
                    startIcon = painterResource(Res.drawable.delete),
                    onClick = onDeleteClick,
                    modifier = Modifier.padding(horizontal = 4.dp)
...
